# rechnerstrukturen-und-betriebssysteme-2-praktikum-ss24

./: .gitignore  CMakeLists.txt  README.md
src/: pr01_auf02.c  pr01_auf03.c  pr01_auf04.c  pr01_auf05.c  pr01_auf06.c
