cmake_minimum_required(VERSION 3.28)
project(rechnerstrukturen-und-betriebssysteme-2-praktikum-ss24 C)

set(CMAKE_C_STANDARD 23)

add_executable(pr01_auf01   src/pr01_auf01.c)
add_executable(pr01_auf02   src/pr01_auf02.c)
add_executable(pr01_auf03   src/pr01_auf03.c)
add_executable(pr01_auf04   src/pr01_auf04.c)
add_executable(pr01_auf05   src/pr01_auf05.c)
add_executable(pr01_auf06   src/pr01_auf06.c)
